--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
 Theme Name: Bootstrap 5 for WP
 Theme URI: http://example.com/my-bootstrap-theme
+Tags: Bootstrap-5, light-weight, clean, customizable
 Author: Sunny Alhat
 Author URI: https://sunnyalhat.com
 Description: A WordPress theme based on Bootstrap CSS 5.
